Use paper api where applicable